[gd_scene load_steps=5 format=3 uid="uid://csnfwhpjcfpjh"]

[ext_resource type="Script" uid="uid://dit8hb8s85din" path="res://scripts/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_fill"]
bg_color = Color(0, 0.8, 0.2, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 140.0
theme_override_constants/separation = 8

[node name="ScrapLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scrap: 0"

[node name="PlayerHealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="PlayerStaminaBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_stamina_fill")
value = 100.0
show_percentage = false

[node name="WaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wave: 1"

[node name="EnemiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enemies: 0"

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Next wave: --"
